crates/wikirs-tui/tests/snapshots/tui__backlinks.snap
---
source: crates/wikirs-tui/tests/tui.rs
assertion_line: 267
expression: fx.frame()
---
 wikirs   Engineering / Rust / Async notes
┌ Pages ───────────────────┐┌ Async notes ───────────────────────────────────────────┐┌────────────────────────────────┐
│Engineering        ┌ Backlinks (Enter opens) ─────────────────────────────────────────────────────┐                   │
│  Rust             │Rust                     eng/rust                                             │                   │
│    Async notes    │Inbox                    inbox                                                │                   │
│Inbox              │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │t                  │
│                   │                                                                              │ust/async/diagram.p│
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │async              │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   └──────────────────────────────────────────────────────────────────────────────┘                   │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
└──────────────────────────┘└────────────────────────────────────────────────────────┘└────────────────────────────────┘
 j/k move  Tab links  1-9 follow  o open  / search  b backlinks  e edit  E $EDITOR  R move  : cmd  ^k ops  q quit
