crates/wikirs-tui/tests/snapshots/tui__banner.snap
---
source: crates/wikirs-tui/tests/tui.rs
assertion_line: 387
expression: fx.frame()
---
 wikirs   Inbox  ● unsaved
 CHANGED ON DISK: (Esc first if editing)  [r] Reload   [m] Keep mine   [d] Compare
┌ Pages ───────────────────┐┌ Inbox ─────────────────────────────────────────────────┐┌────────────────────────────────┐
│Engineering               ││mine # Inbox                                            ││BACKLINKS                       │
│  Rust                    ││                                                        ││  none                          │
│    Async notes           ││• read [1]eng/rust/async                                ││                                │
│Inbox                     ││                                                        ││LINKS                           │
│                          ││                                                        ││  [1] eng/rust/async            │
│                          ││                                                        ││                                │
│                          ││                                                        ││OUTLINE                         │
│                          ││                                                        ││                                │
│                          ││                                                        ││TAGS                            │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
└──────────────────────────┘└────────────────────────────────────────────────────────┘└────────────────────────────────┘
 Tab links  1-9 follow  o open  / search  b backlinks  t tasks  e edit  E $EDITOR  R move  : cmd  ^k ops  q quit
