crates/wikirs-tui/tests/snapshots/tui__compare.snap
---
source: crates/wikirs-tui/tests/tui.rs
assertion_line: 358
expression: fx.frame()
---
 wikirs   Inbox  ● unsaved
 CHANGED ON DISK: (Esc first if editing)  [r] Reload   [m] Keep mine   [d] Compare
┌ Mine (unsaved) ──────────────────────────────────────────┐┌ On disk (d closes) ──────────────────────────────────────┐
│mine # Inbox                                              ││theirs                                                    │
│                                                          ││                                                          │
│- read [[eng/rust/async]]                                 ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
└──────────────────────────┘└────────────────────────────────────────────────────────┘└────────────────────────────────┘
 j/k move  Tab links  1-9 follow  o open  / search  b backlinks  e edit  E $EDITOR  R move  : cmd  ^k ops  q quit
