crates/wikirs-tui/tests/snapshots/tui__form.snap
---
source: crates/wikirs-tui/tests/tui.rs
assertion_line: 173
expression: fx.frame()
---
 wikirs   Engineering / Rust / Async notes
┌ Pages ───────────────────┐┌ Async notes ───────────────────────────────────────────┐┌────────────────────────────────┐
│Engineering   ┌ ctrl-k ────────────────────────────────────────────────────────────────────────────────┐              │
│  Rust        │move_page  mutation                                                                     │              │
│    Async note│Move or rename a Page with its Child Pages and Attachments, rewriting every Link to     │              │
│Inbox         │them.                                                                                   │              │
│              │                                                                                        │              │
│              │   from*: eng/rust/async█                                                               │              │
│              │     to*:                                                                               │sync/diagram.p│
│              │ dry run  [x] (ctrl-d)                                                                  │              │
│              │                                                                                        │              │
│              └────────────────────────────────────────────────────────────────────────────────────────┘              │
│                          ││                                                        ││                                │
│                          ││┃ NOTE                                                  ││TAGS                            │
│                          ││┃ Careful with Pin.                                     ││  #lang/rust/async              │
│                          ││                                                        ││                                │
│                          ││• [x] done                                              ││                                │
│                          ││• [ ] todo                                              ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
│                          ││                                                        ││                                │
└──────────────────────────┘└────────────────────────────────────────────────────────┘└────────────────────────────────┘
 Tab links  1-9 follow  o open  / search  b backlinks  t tasks  e edit  E $EDITOR  R move  : cmd  ^k ops  q quit
